# DrugForecast

./: README.md  app.py  data_acquisition.py  modeling.py  pyproject.toml  replit.md  requirements.txt  utils.py
attached_assets/: Pasted-Project-Title-Pharmaceutical-Investment-Analysis-Predicting-Clinical-Trial-Success-with-Public-Dat-1755852981599_1755852981600.txt
